--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -333,6 +333,7 @@
         <option value="10">10</option>
     </select>
     <button id="rate_it_btn">Rate it</button>
+    <span id="rate_by_user">--/10</span>
 </div>
 
 @if(userId != "-1"){ ///images/users/
