--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -124,7 +124,6 @@ header .header-wrap {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid var(--background-color2);
-  padding-bottom: 10px;
 }
 .drawer .dw-top .dw-close {
   padding: 10px;
@@ -136,9 +135,7 @@ header .header-wrap {
 .drawer .dw-top .dw-account {
   flex-grow: 1;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  text-align: center;
   overflow: hidden;
 }
 .drawer .dw-top .dw-account .dw-userimg {
@@ -154,15 +151,17 @@ header .header-wrap {
 .drawer .dw-top .dw-account .dw-userimg i {
   font-size: 4rem;
 }
-.drawer .dw-top .dw-account .dw-username {
-  font-family: "Doppio One", sans-serif;
-  padding-bottom: 8px;
-  font-size: 1.1rem;
-}
 .drawer .dw-top .dw-account .dw-acc-info {
   font-family: "Hubballi", cursive;
   padding-bottom: 6px;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+}
+.drawer .dw-username {
+  display: flex;
+  justify-content: center;
+  font-family: "Doppio One", sans-serif;
+  padding: 8px 0;
+  font-size: 1.1rem;
 }
 .drawer .dw-mainpage {
   border-top: 1px solid #313131;
