--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -271,6 +271,7 @@ main {
   left: 0;
   bottom: 0;
   right: 0;
+  box-shadow: 0px 0px 36px 17px rgba(0, 0, 0, 0.7);
 }
 
 .start_reading {
@@ -301,14 +302,16 @@ main {
   height: 30px;
   font-family: "Josefin Sans", sans-serif;
 }
-.chapter_selection a, .chapter_selection span {
+.chapter_selection a,
+.chapter_selection span {
   font-size: 1.2rem;
   transition: font-size 0.1s ease;
   color: var(--text-color1);
   text-decoration: underline;
   cursor: pointer;
 }
-.chapter_selection a:hover, .chapter_selection span:hover {
+.chapter_selection a:hover,
+.chapter_selection span:hover {
   font-size: 1.4rem;
 }
 
