--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -352,7 +352,34 @@
             Filter
         </span>
     </div>
-    <div class="post-list pl-masonry" id="postListSection">
+    <div class="post-list pl-masonry-2" id="postListSection">
     
+    </div>
+    <div class="pagination">
+        <div class="pagination-cont">
+            <div class="p-prevs">
+                <i class="bi bi-chevron-double-left"></i>
+                <a href="#" class="page_link">Prev</a>
+            </div>
+            <select class="page_select">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+                <option>13</option>
+            </select>
+            <div class="p-nexts">
+                <a href="#" class="page_link">Next</a>
+                <i class="bi bi-chevron-double-right"></i>
+            </div>
+        </div>
     </div>
 </div>
