--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -493,6 +493,47 @@ main {
   background-color: #0f546d;
 }
 
+.pagination {
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 14px;
+}
+.pagination .pagination-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 400px;
+}
+.pagination .pagination-cont .page_select {
+  font-family: "Itim", cursive;
+  padding: 4px 4px 4px 10px;
+  font-size: 1.2rem;
+  border: none;
+  outline: none;
+  color: var(--text-color1);
+  background-color: var(--background-color2);
+  border-radius: 4px;
+}
+.pagination .pagination-cont .p-prevs, .pagination .pagination-cont .p-nexts {
+  display: flex;
+}
+.pagination .pagination-cont .p-prevs .page_link, .pagination .pagination-cont .p-nexts .page_link {
+  color: var(--text-color1);
+  text-decoration: underline;
+  font-family: "Kalam", cursive;
+  font-size: 1.2rem;
+  padding: 1px 14px 0px;
+}
+.pagination .pagination-cont .p-prevs i, .pagination .pagination-cont .p-nexts i {
+  cursor: pointer;
+  font-size: 1.2rem;
+  transform: scale(0.9, 1.2);
+}
+
 @media (min-width: 768px) {
   .nav-cont {
     display: flex;
@@ -513,6 +554,9 @@ main {
   .f-removetagbtn:before {
     background-color: #c08e8e !important;
   }
+  .pagination {
+    background-color: var(--background-color-hover4);
+  }
 }
 @media (min-width: 992px) {
   .nav-cont {
@@ -531,6 +575,15 @@ main {
   .pl-masonry .post:nth-child(2n+1) {
     margin-right: 1%;
   }
+  .pl-masonry-2 {
+    display: block !important;
+    -moz-column-count: 2;
+         column-count: 2;
+  }
+  .pl-masonry-2 .post {
+    -moz-column-break-inside: avoid;
+         break-inside: avoid;
+  }
 }
 @media (max-width: 340px) {
   .orderby-value {
@@ -538,5 +591,11 @@ main {
   }
   .po-option {
     font-size: 1.3rem !important;
+  }
+}
+@media (max-width: 240px) {
+  .pagination .pagination-cont {
+    flex-direction: column;
+    gap: 10px;
   }
 }/*# sourceMappingURL=read.css.map */
