--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -503,7 +503,46 @@ main{
         }
     }
 }
-
+.pagination{
+    width: 100%;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 14px;
+    .pagination-cont{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 400px;
+        .page_select{
+            font-family: 'Itim', cursive;
+            padding: 4px 4px 4px 10px;
+            font-size: 1.2rem;
+            border: none;
+            outline: none;
+            color: var(--text-color1);
+            background-color: var(--background-color2);
+            border-radius: 4px;
+        }
+        .p-prevs, .p-nexts{
+            display: flex;
+            .page_link{
+                color: var(--text-color1);
+                text-decoration: underline;
+                font-family: 'Kalam', cursive;
+                font-size: 1.2rem;
+                padding: 1px 14px 0px;
+            }
+            i{
+                cursor: pointer;
+                font-size: 1.2rem;
+                transform: scale(.9,1.2);
+            }
+        }
+    }
+}
 
 
 // Small devices (landscape phones, 576px and up)
@@ -532,7 +571,9 @@ main{
     .f-removetagbtn:before {
         background-color: #c08e8e !important;
     }
-    
+    .pagination{
+        background-color: var(--background-color-hover4);
+    }
 }
 
 // Large devices (desktops, 992px and up)
@@ -540,6 +581,8 @@ main{
     .nav-cont{
         width: 240px;
     }
+
+    //activate masonry designs after 992px
     .pl-masonry{
         flex-flow: column wrap;
         .post{
@@ -551,6 +594,13 @@ main{
         }
         .post:nth-child(2n+1) {
             margin-right: 1%;
+        }
+    }
+    .pl-masonry-2{
+        display: block !important;
+        column-count: 2;
+        .post{
+            break-inside: avoid;
         }
     }
 }
@@ -567,6 +617,13 @@ main{
     }
     .po-option{
         font-size: 1.3rem !important;
+    }
+}
+
+@media (max-width: 240px) {
+    .pagination .pagination-cont{
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
