--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -518,17 +518,14 @@ main {
   background-color: var(--background-color2);
   border-radius: 4px;
 }
-.pagination .pagination-cont .p-prevs, .pagination .pagination-cont .p-nexts {
-  display: flex;
-}
-.pagination .pagination-cont .p-prevs .page_link, .pagination .pagination-cont .p-nexts .page_link {
+.pagination .pagination-cont .page_link {
   color: var(--text-color1);
   text-decoration: underline;
   font-family: "Kalam", cursive;
   font-size: 1.2rem;
-  padding: 1px 14px 0px;
+  padding-top: 1px;
 }
-.pagination .pagination-cont .p-prevs i, .pagination .pagination-cont .p-nexts i {
+.pagination .pagination-cont i {
   cursor: pointer;
   font-size: 1.2rem;
   transform: scale(0.9, 1.2);
