--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -526,20 +526,17 @@ main{
             background-color: var(--background-color2);
             border-radius: 4px;
         }
-        .p-prevs, .p-nexts{
-            display: flex;
-            .page_link{
-                color: var(--text-color1);
-                text-decoration: underline;
-                font-family: 'Kalam', cursive;
-                font-size: 1.2rem;
-                padding: 1px 14px 0px;
-            }
-            i{
-                cursor: pointer;
-                font-size: 1.2rem;
-                transform: scale(.9,1.2);
-            }
+        .page_link{
+            color: var(--text-color1);
+            text-decoration: underline;
+            font-family: 'Kalam', cursive;
+            font-size: 1.2rem;
+            padding-top: 1px;
+        }
+        i{
+            cursor: pointer;
+            font-size: 1.2rem;
+            transform: scale(.9,1.2);
         }
     }
 }
