--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -120,11 +120,11 @@
 <template id="paginationTemplate">
     <div class="pagination">
         <div class="pagination-cont">
-            <i class="bi bi-chevron-double-left"></i>
-            <a href="#" class="page_link">Prev</a>
+            <i class="bi bi-chevron-double-left firstPageBtn"></i>
+            <a class="page_link" id="prevPageBtn">Prev</a>
             <select class="page_select"> </select>
-            <a href="#" class="page_link">Next</a>
-            <i class="bi bi-chevron-double-right"></i>
+            <a class="page_link" id="nextPageBtn">Next</a>
+            <i class="bi bi-chevron-double-right lastPageBtn"></i>
         </div>
     </div>
 </template>
