--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -215,21 +215,22 @@
                 <div class="p-evaluation">
                     @{//Required codes
                         //Checking if the user logged in and voted the post
-                        string likeBtnClasses = "bi bi-hand-thumbs-up";
-                        string dislikeBtnClasses = "bi bi-hand-thumbs-down";
-                        if(userId != "-1" && post.votes != null){
-                            if(post.votes.SingleOrDefault(p => p.accountId == Convert.ToInt32(userId) && p.body == true) != null){
-                                likeBtnClasses = "bi bi-hand-thumbs-up-fill active likebtn";
-                                dislikeBtnClasses = "bi bi-hand-thumbs-down dislikebtn";
+                        string likeBtnClasses = "bi bi-hand-thumbs-up likebtn";
+                        string dislikeBtnClasses = "bi bi-hand-thumbs-down dislikebtn";
+                        if(userId != "-1"){
+                            if(post.votes != null){
+                                if(post.votes.SingleOrDefault(p => p.accountId == Convert.ToInt32(userId) && p.body == true) != null){
+                                    likeBtnClasses = "bi bi-hand-thumbs-up-fill active likebtn";
+                                    dislikeBtnClasses = "bi bi-hand-thumbs-down dislikebtn";
+                                }
+                                else if(post.votes.SingleOrDefault(p => p.accountId == Convert.ToInt32(userId) && p.body == false) != null){
+                                    likeBtnClasses = "bi bi-hand-thumbs-up likebtn";
+                                    dislikeBtnClasses = "bi bi-hand-thumbs-down-fill active dislikebtn";
+                                }
                             }
-                            else if(post.votes.SingleOrDefault(p => p.accountId == Convert.ToInt32(userId) && p.body == false) != null){
-                                likeBtnClasses = "bi bi-hand-thumbs-up likebtn";
-                                dislikeBtnClasses = "bi bi-hand-thumbs-down-fill active dislikebtn";
-                            }
-                            else{
-                                likeBtnClasses = "bi bi-hand-thumbs-up likebtn";
-                                dislikeBtnClasses = "bi bi-hand-thumbs-down dislikebtn";
-                            }
+                        } else {
+                            likeBtnClasses = "bi bi-hand-thumbs-up";
+                            dislikeBtnClasses = "bi bi-hand-thumbs-down";
                         }
                     }
                     @Html.Raw("<i class='" + @likeBtnClasses + "' data-action='like' data-target_type='post'></i>")
