--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -1,8 +1,5 @@
-@using OmneFictio.Web.Models
-@using OmneFictio.Web.PostReadModel
-@using PostModel = OmneFictio.Web.PostReadModel
-@model GetpostViewmodel
 
+@model GetpostViewmodel
 @{
     ViewData["Title"] = "Post";
     @section Stylesheets {
@@ -13,8 +10,6 @@
     }
 }
 @{
-    PostModel.PostRead1 post = @Model.post!;
-
     string userId = "-1";
     string username = "";
     string userPicture = "none"; 
@@ -23,8 +18,7 @@
     username = User.Claims.FirstOrDefault(claim => claim.Type == "unique_name")?.Value ?? "";
     userPicture = User.Claims.FirstOrDefault(claim => claim.Type == "actort")?.Value ?? "none";
 }
-<input type="hidden" value="@post.id" id="postid">
-
+<input type="hidden" value="@Model.postid" id="postid">
 
 
 <template id="comment_instance">
@@ -148,6 +142,76 @@
     </div>
 </template>
 
+<template id="getpost_instance">
+    <div class="post-2" data-postid="">
+        <div class="post-card">
+            <div class="p-body">
+                <div class="p-cover">
+                    <img src="/images/covers/" class="p-basecover" 
+                        onerror="this.onerror=null; this.closest('.p-cover').remove()">
+                    <div class="p-upscalecover-cont" id="p-upscalecover">
+                        <img src="/images/covers/" class="p-upscalecover">
+                        <i class="bi bi-zoom-in"></i>
+                    </div>
+                </div>
+                <div class="p-text">
+                    <div class="p-title-cont">
+                        <span class="p-title">
+                            
+                        </span>
+                        <span class="p-date">
+                            
+                        </span>
+                    </div>
+                    <span class="p-description">
+                        
+                    </span>
+                </div>
+            </div>
+            <div class="p-footer">
+                <div class="p-footer-wrap">
+                    <div class="p-evaluation">
+                        <i class="" data-action="like" data-target_type="post"></i>
+                        <span class="p-likes vote_count">--</span>
+                        <i class="" data-action="dislike" data-target_type="post"></i>
+                        <span class="p-rate">
+                            
+                        </span>
+                    </div>
+                    <div class="p-user">
+                        <span class="p-username">
+                            
+                        </span>
+                        <div class="p-uimg-cont">
+                            <img src="/images/users/" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="post-more">
+            <div class="p-actions">
+                <button type="button" class="pd-saved">Save</button>
+                <button type="button">Share</button>
+                <button type="button">Report</button>
+            </div>
+            <div class="pd-items">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="pd-series">
+
+            </div>
+            <div class="pd-tags">
+
+            </div>
+        </div>
+    </div>
+</template>
+
 
 <div class="modal-chapters" id="modal-chapters">
     <div class="mc-header">
@@ -157,12 +221,7 @@
         </div>
     </div>
     <div class="mc-body">
-        <ul>
-            @foreach (Chapter chapter in 
-                post.chapters.OrderBy(s => s.chapterIndex).ToList())
-            {
-                <li><a href="#">@chapter.title</a></li>
-            }
+        <ul id="modalchapters-list">
         </ul>
     </div>
 </div>
@@ -184,36 +243,35 @@
         <div class="fsc-close" id="fsc-close">
             <i class="bi bi-x-lg"></i>
         </div>
-        <!--<div style='background-image: url("/images/covers/@post.coverImage");'></div>-->
     </div>
-    <img src="/images/covers/@post.coverImage">
+    <img src="/images/covers/" id="fsc-img">
 </div>
-
-<div class="post-2" data-postid="@post.id">
+<!--
+<div class="post-2" data-postid="post.id">
     <div class="post-card">
         <div class="p-body">
-            @if(post.coverImage != null){
+            if(post.coverImage != null){
                 <div class="p-cover">
-                    <img src="/images/covers/@post.coverImage" class="p-basecover" 
+                    <img src="/images/covers/post.coverImage" class="p-basecover" 
                         onerror="this.onerror=null; this.closest('.p-cover').remove()">
                     <div class="p-upscalecover-cont" id="p-upscalecover">
-                        <img src="/images/covers/@post.coverImage" class="p-upscalecover">
+                        <img src="/images/covers/post.coverImage" class="p-upscalecover">
                         <i class="bi bi-zoom-in"></i>
                     </div>
                 </div>
             }
             <div class="p-text">
                 <div class="p-title-cont">
-                    <span class="p-title">@post!.title</span>
-                    <span class="p-date">@post.publishDate.Date.ToShortDateString()</span>
+                    <span class="p-title">post!.title</span>
+                    <span class="p-date">post.publishDate.Date.ToShortDateString()</span>
                 </div>
-                <span class="p-description">@post.postDescription</span>
+                <span class="p-description">post.postDescription</span>
             </div>
         </div>
         <div class="p-footer">
             <div class="p-footer-wrap">
                 <div class="p-evaluation">
-                    @{//Required codes
+                    {//Required codes
                         //Checking if the user logged in and voted the post
                         string likeBtnClasses = "bi bi-hand-thumbs-up likebtn";
                         string dislikeBtnClasses = "bi bi-hand-thumbs-down dislikebtn";
@@ -233,21 +291,21 @@
                             dislikeBtnClasses = "bi bi-hand-thumbs-down";
                         }
                     }
-                    @Html.Raw("<i class='" + @likeBtnClasses + "' data-action='like' data-target_type='post'></i>")
+                    Html.Raw("<i class='" + likeBtnClasses + "' data-action='like' data-target_type='post'></i>")
                     <span class="p-likes vote_count">
-                        @(post.voteResult >= 0 ? post.voteResult : "--")
+                        (post.voteResult >= 0 ? post.voteResult : "--")
                     </span>
-                    @Html.Raw("<i class='" + @dislikeBtnClasses + "' data-action='dislike' data-target_type='post'></i>")
+                    Html.Raw("<i class='" + dislikeBtnClasses + "' data-action='dislike' data-target_type='post'></i>")
                     <span class="p-rate">
-                        @(post.rateResult >= 0 && post.rateResult <= 10
+                        (post.rateResult >= 0 && post.rateResult <= 10
                             ? Math.Round(post.rateResult, 1).ToString() + "/10"
                             : "-/10" )
                     </span>
                 </div>
                 <div class="p-user">
-                    @if(post.account != null){
+                    if(post.account != null){
                         <span class="p-username">
-                            @(post.account.displayName != null
+                            (post.account.displayName != null
                                 ? post.account.displayName
                                 : post.account.username )
                         </span>
@@ -255,7 +313,7 @@
                         <span class="p-username p-deleted_user">DeletedUser</span>
                     }
                     <div class="p-uimg-cont">
-                        <img src="/images/users/@userPicture" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                        <img src="/images/users/userPicture" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                     </div>
                 </div>
             </div>
@@ -269,37 +327,42 @@
             <button type="button">Report</button>
         </div>
         <div class="pd-items">
-            @if(post.postType != null){
-                <span>@post.postType.body</span>
+            if(post.postType != null){
+                <span>post.postType.body</span>
             }
-            @if(post.language != null){
-                <span>@post.language.body</span>
+            if(post.language != null){
+                <span>post.language.body</span>
             }
-            @if(post.postStatus != null){
-                <span>@post.postStatus.body</span>
+            if(post.postStatus != null){
+                <span>post.postStatus.body</span>
             }
-            @if(post.ratedAs != null){
-                <span>@post.ratedAs.body</span>
+            if(post.ratedAs != null){
+                <span>post.ratedAs.body</span>
             }
         </div>
-        @if(post.existingStories.Count > 0){
+        if(post.existingStories.Count > 0){
             <div class="pd-series">
-                @foreach(ExistingStory story in post.existingStories){
-                    <span>@story.body</span>
+                foreach(ExistingStory story in post.existingStories){
+                    <span>story.body</span>
                 }
             </div>
         }
         <div class="pd-tags">
-            @if(post.tags.Count < 1){
+            if(post.tags.Count < 1){
                 <span>No tag</span>
             } else{
                 foreach(Tag tag in post.tags){
-                    <span>@tag.body</span>
+                    <span>tag.body</span>
                 }
             }
         </div>
     </div>
     
+</div>
+
+-->
+<div class="post-wrap" id="post-wrap">
+
 </div>
 
 <div class="start_reading">
