--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -5,6 +5,9 @@ main {
     flex-direction: column;
 }
 
+.post-wrap{
+    min-height: 200px;
+}
 .post-2 {
     width: 100%;
     padding-top: 16px;
