--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -529,6 +529,7 @@ main {
   cursor: pointer;
   font-size: 1.2rem;
   transform: scale(0.9, 1.2);
+  padding-bottom: 1px;
 }
 
 @media (min-width: 768px) {
